--- a/toc.yaml
+++ b/toc.yaml
@@ -21,7 +21,7 @@ toc:
        - sg_network_config.md
        - sg_perf_limits.md
        - naas-overview.md
-       - include: /fortigate-10g/explore-firewalls.md
+       - include: ../fortigate-10g/explore-firewalls.md
        - external-resources.md
        - link:
           label: What is network security?
