JACK MITCHELL update

--- a/toc.yaml
+++ b/toc.yaml
@@ -6,7 +6,7 @@ toc:
     audience: service
     href: /docs/security-groups
     console-page: /classic/security/securitygroups
-    product-page: https://www.ibm.com/cloud/virtual-servers
+    product-page: https://www.ibm.com/products/virtual-servers
     path: security-groups
     label: Security Groups
   entries:
@@ -20,10 +20,9 @@ toc:
        - sg_perf_limits.md
        - naas-overview.md
        - include: ../fortigate-10g/explore-firewalls.md
-       - external-resources.md
        - link:
           label: What is network security?
-          href: https://www.ibm.com/cloud/learn/networking-a-complete-guide
+          href: https://www.ibm.com/topics/networking
        - release-notes.md
     - navgroup:
        id: howto
