--- a/toc.yaml
+++ b/toc.yaml
@@ -22,7 +22,7 @@ toc:
        - include: ../fortigate-10g/explore-firewalls.md
        - link:
           label: What is network security?
-          href: https://www.ibm.com/topics/networking
+          href: https://www.ibm.com/think/topics/networking
        - release-notes.md
     - navgroup:
        id: howto
@@ -46,7 +46,7 @@ toc:
        - link:
           label: Terraform reference
           href: https://registry.terraform.io/providers/IBM-Cloud/ibm/latest/docs/resources/security_group
-       - include: ../cloud-infrastructure/ips.md
+       - include: ../infrastructure-hub/ips.md
     - navgroup:
        id: help
        topics:
